--- a/SpringMvcCrud/war/index.html
+++ b/SpringMvcCrud/war/index.html
@@ -10,12 +10,39 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Hello App Engine</title>
+    <style type="text/css">
+    
+    a{
+    font: bold;
+    font-family: cursive;
+    font-size: 45px;
+    color: red;
+    text-decoration: none;
+    }
+    a:HOVER {
+	
+	text-decoration: none;
+	font-style: italic;
+	color: green;
+	
+}
+
+ td{
+  font: bold;
+  font-family: fantasy;
+  font-size: 35px;
+  color:black;
+ }
+
+
+
+    </style>
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
+   
 	
-    <table>
+    <table align="center">
       <tr>
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
