--- a/ajaxexampe/WebContent/index.html
+++ b/ajaxexampe/WebContent/index.html
@@ -42,8 +42,11 @@ document.getElementById('nitish').innerHTML=val;
 <input type="text" name="t1">  
 <input type="button" value="ShowTable" onClick="sendInfo()">  
 </form>  
-  
+<div><a href="admin.jsp">Admin</a></div>
+<div>
 <span id="nitish"> </span>  
+ </div>   
+  
   
 </body>  
 </html>  
