--- a/SpringMvcCrud/war/index.html
+++ b/SpringMvcCrud/war/index.html
@@ -9,7 +9,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <title> Engine</title>
     <style type="text/css">
     
     a{
@@ -26,22 +26,16 @@
 	color: green;
 	
 }
-
  td{
   font: bold;
   font-family: fantasy;
   font-size: 35px;
   color:black;
  }
-
-
-
     </style>
   </head>
 
-  <body>
-   
-	
+  <body>	
     <table align="center">
       <tr>
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
