--- a/ajaxexampe/WebContent/index.html
+++ b/ajaxexampe/WebContent/index.html
@@ -37,7 +37,7 @@ document.getElementById('nitish').innerHTML=val;
 </script>  
 </head>  
 <body>  
-    <marquee><h1>This is an example of ajax</h1></marquee>  
+    <!-- <marquee><h1>This is an example of ajax</h1></marquee>   -->
 <form name="vinform">  
 <input type="text" name="t1">  
 <input type="button" value="ShowTable" onClick="sendInfo()">  
